items padding on mobile fixed

--- a/Assets/items-animation.css
+++ b/Assets/items-animation.css
@@ -163,8 +163,8 @@
 		border-radius: 2px;
 
 
-		padding-inline: 24px;
-		padding-block: 12px;
+		padding-inline: 12px;
+		padding-block: 6px;
 
 		text-align: center;
 
@@ -192,12 +192,20 @@
 
 }
 
-@media (min-width:1100px){
+@media (min-width:1100px) {
 
-	.items-container{
+	.items-container {
 		&>ul {
 			gap: 10px;
 			margin-top: 0px;
+		}
+
+	}
+
+	.items-container ul{
+		li {
+			padding-inline: 24px;
+			padding-block: 12px;
 		}
 	}
 
@@ -210,7 +218,7 @@
 		display: flex;
 		flex-direction: row;
 		justify-content: space-between;
-	
+
 
 		&>ul {
 			flex-direction: column;
